--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Covid Tracker App</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
 
-    Hi, this is Covid Tracker App.
-    
+<body>
+    <h1>Covid Tracker</h1>
+    <div class="flex-container">
+        <div class="header-container">Header</div>
+        <div class="content-container">
+            <div class="map-container">Map</div>
+            <div class="aside-container">ListofProvinces</div>
+        </div>
+    </div>
 </body>
+
 </html>
