--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Covid Tracker App</title>
     <link rel="stylesheet" href="styles/styles.css">
     <script defer type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js">
-    </script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js" defer></script>
+    <script src="js/script.js" defer></script>
 </head>
 
 <body>
@@ -34,8 +34,13 @@
         </div>
         <div class="content-container">
             <div class="map-container">Map</div>
-            <div class="aside-container">ListofProvinces</div>
+            <div class="aside-container">
+                ListofProvinces
+                <div id="api-data"></div>
+            </div>
         </div>
+            
+       </div>
     </div>
 </body>
 
