Refs #9: Updated the aside container

--- a/index.html
+++ b/index.html
@@ -34,13 +34,11 @@
         </div>
         <div class="content-container">
             <div class="map-container">Map</div>
-            <div class="aside-container">
-                ListofProvinces
-                <div id="api-data"></div>
+            <div class="aside-container" id="api-data">
+                <h4>Regions</h4>
             </div>
         </div>
-            
-       </div>
+    </div>
     </div>
 </body>
 
