Refs #13: Fixed the missing script tag in html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script defer type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js" defer></script>
     <script src="js/script.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+
 </head>
 
 <body>
@@ -33,7 +35,7 @@
             </div>
         </div>
         <div class="content-container">
-            <div class="map-container">Map</div>
+            <div id="chart" class="map-container"></div>
             <div class="aside-container" id="api-data">
                 <h4>Regions</h4>
             </div>
