Refs #16: Added a select box to select the region

--- a/index.html
+++ b/index.html
@@ -17,9 +17,29 @@
     <h1>Covid Tracker</h1>
     <div class=" flex-container">
         <div class="header-container">
-            <div style="display: flex; flex-direction: row;">
-                <ion-icon name="globe-outline"></ion-icon>
-                Stats Overview
+            <div class="cases-container" id="total-cases">
+                <div>
+                    <ion-icon name="globe-outline"></ion-icon>
+                    Stats Overview
+                </div>
+                <div>
+                    <select name="area" id="area">
+                        <option value="canada">Canada</option>
+                        <option value="ontario">Ontario</option>
+                        <option value="quebec">Quebec</option>
+                        <option value="alberta">Alberta</option>
+                        <option value="british-columbia">British Columbia</option>
+                        <option value="manitoba">Manitoba</option>
+                        <option value="new-brunswick">New Brunswick</option>
+                        <option value="newfoundland-and-labrador">Newfoundland and Labrador</option>
+                        <option value="northwest-territories">Northwest Territories</option>
+                        <option value="nova-scotia">Nova Scotia</option>
+                        <option value="nunavut">Nunavut</option>
+                        <option value="prince-edward-island">Prince Edward Island</option>
+                        <option value="saskatchewan">Saskatchewan</option>
+                        <option value="yukon">Yukon</option>
+                    </select>
+                </div>
             </div>
             <div>
                 <ion-icon name="calendar-outline"></ion-icon>
